--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@graphcms/rich-text-react-renderer": "^0.6.1",
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
@@ -22,7 +23,8 @@
     "react-toastify": "^9.1.3",
     "sass": "^1.69.7",
     "tailwind-merge": "^2.2.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
