--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -13,7 +13,8 @@
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
-    "gsap": "^3.12.4",
+    "framer-motion": "^11.0.3",
+    "gsap": "^3.12.5",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
