--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -20,12 +20,14 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
+    "react-query": "^3.39.3",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^9.1.3",
     "sass": "^1.69.7",
     "tailwind-merge": "^2.2.0",
+    "uninstall": "^0.0.0",
     "zod": "^3.22.4",
-    "zustand": "^4.4.7"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
