--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
-    "framer-motion": "^11.0.3",
     "gsap": "^3.12.5",
     "next": "14.0.4",
     "react": "^18",
@@ -22,12 +21,11 @@
     "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
     "react-simple-typewriter": "^5.0.1",
-    "react-toastify": "^9.1.3",
+    "react-toastify": "^10.0.4",
     "sass": "^1.69.7",
     "tailwind-merge": "^2.2.0",
     "uninstall": "^0.0.0",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
